# apex-agent

./: .env.example  .gitignore  .gitmodules  AGENTS.md  DESIGN_CHECKLIST.md  Makefile  README.md  config.py  conftest.py  docker-compose.yml  main.py  pyproject.toml
agent/: config.py  context_assembler.py  loop.py  models.py  prompts.py  pyproject.toml  session_engine.py  shared_runner.py  skill_loader.py  tool_dispatch.py  tool_executor.py  turn_executor.py  turn_orchestrator.py
agent/agent/context/: strategies.py  token_counter.py
agent/agent/core/: models.py
agent/agent/events/: __init__.py  bus.py  schema.py
agent/agent/runtime/: loop.py  managed_runtime.py  orchestrator.py  shared_runner.py  wake.py
agent/agent/session/: archive.py  store.py
agent/agent/skills/: analyzer.py  intent.py
agent/context/: assembler.py  manager.py
agent/core/: prompts.py
agent/eval/: metrics.py  runner.py
agent/policy/: access_control.py  permission_policy.py
agent/runtime/: loop.py  managed_runtime.py  orchestrator.py  sandbox.py  shared_runner.py  tool_dispatch.py  wake.py
agent/scenarios/: base.py  registry.py
agent/scenarios/core_agent/: evaluator.py  scenario.py  test_cases.json
agent/scenarios/research_and_report/: evaluator.py  test_cases.json
agent/scenarios/stock_strategy/: evaluator.py  test_cases.json
agent/services/: __init__.py  search_orchestrator.py
agent/session/: archive.py  engine.py  store.py
agent/skill_packs/stock_strategy/: skill.py
agent/skills/: analyzer.py  loader.py
agent/tests/: test_eval_comparator.py  test_m2_runtime_bus.py  test_managed_runtime.py  test_rag_quality_benchmark.py  test_skill_intent.py  test_t1_managed_agent_properties.py  test_t1_tool_dispatch_contract.py
agent/tests/fixtures/core_agent/: conflict_a.txt  conflict_b.txt
agent/tests/fixtures/rag/: orchid_unrelated.md
agent/tests/fixtures/research_and_report/easy_sources/: 01_overview.md
agent/tests/fixtures/research_and_report/hard_sources/: 02_analyst_novagreen.md  04_solaris_prototype.md
agent/tests/fixtures/research_and_report/medium_sources/: 01_solaris_overview.md
agent/tools/: __init__.py  filesystem.py  memory.py  skill_meta.py
backend/: Iran_Israel_Conflict_Report_April_2026.md  MSTR_analysis_report.md  Makefile  US_Iran_Conflict_Report_April_2026.md  counting_app.html  pyproject.toml  timer_app.html  美伊关系分析报告_2024.md
backend/apex_server/: __init__.py  app.py  auth.py  deps.py  runner.py  wealth_store.py
backend/apex_server/routes/: __init__.py  artifacts_routes.py  auth_routes.py  events_routes.py  session_support.py  sessions_routes.py  skills_routes.py  turns_routes.py  wealth_routes.py
backend/projects/todo-app/: app.js  index.html  style.css
backend/tests/: test_m4_server.py
core/: config.py  main.py  pyproject.toml
core/sandbox/: Dockerfile
core/src/agent/artifacts/: __init__.py  model.py  store.py
core/src/agent/context/: compressor.py  fact_extractor.py  manager.py
core/src/agent/core/: models.py  prompts.py
core/src/agent/events/: __init__.py  schema.py
core/src/agent/policy/: education_compliance.py  permission_policy.py
core/src/agent/runtime/: cost_tracker.py  managed_runtime.py  orchestrator.py  sandbox.py  token_tracker.py  tool_context.py  tool_dispatch.py  trace.py  tracking.py
core/src/agent/session/: archive.py  store.py
core/src/agent/skills/: loader.py
core/src/eval/: comparator.py  mock_brain.py  runner.py
core/src/eval/baselines/: core_agent.json
core/src/scenarios/: registry.py
core/src/scenarios/coding/: __init__.py  scenario.py
core/src/scenarios/coding/cases/: case_001.json  case_002.json  case_003.json
core/src/scenarios/core_agent/: test_cases.json
core/src/scenarios/lt1_equity_briefing/: __init__.py  docx_utils.py  evaluator.py  scenario.py  test_cases.json
core/src/scenarios/wealth_guide/: __init__.py  scenario.py  test_cases.json
core/src/services/: retrieval_policy.py  web_search.py
core/src/skill_packs/: __init__.py  registry.py
core/src/skill_packs/coding/: REFERENCE.md  SKILL.md  __init__.py  skill.py  tools.py
core/src/skill_packs/stock_strategy/: REFERENCE.md  SKILL.md  skill.py  tools.py
core/src/skill_packs/wealth_guide/: REFERENCE.md  SKILL.md  __init__.py  skill.py  tools.py
core/src/tools/: base.py  filesystem.py  planner.py  shell.py  web.py
core/tests/: test_core_agent_evaluator.py  test_education_compliance.py  test_lt1_equity_briefing.py  test_m1_contracts.py  test_m3_artifact_events.py  test_managed_runtime.py  test_memory_system.py  test_skill_loader_routing.py  test_squad_batch_benchmark.py  test_t1_managed_agent_properties.py  test_t3_apex_extensions.py  test_wealth_guide_scenario.py  test_wealth_guide_skill.py  test_web_research.py  test_web_search_service.py
core/tests/fixtures/rag/: pineglass_old_draft.md
core/tests/fixtures/research_and_report/hard_sources/: 05_market_context.md
core/tests/fixtures/research_and_report/medium_sources/: 02_solaris_roadmap.md  (+1 more)
tui/: Makefile  app.py  pyproject.toml  styles.py
(+129 files in other folders)
