[project]
name = "agent-harness"
version = "0.1.0"
description = "General-purpose autonomous agent platform with benchmark harness"
requires-python = ">=3.11"
dependencies = [
    # LLM
    "litellm>=1.40.0",
    # Data
    "yfinance>=0.2.36",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    # Charts
    "plotext>=5.2.8",
    "mplfinance>=0.12.10b0",
    "matplotlib>=3.8.0",
    # TUI
    "textual>=0.50.0",
    "rich>=13.7.0",
    # Config
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    # Web
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
