[project]
name = "apex-agent-workspace"
version = "0.1.0"
description = "Apex Agent monorepo — agent library, FastAPI backend, TUI client."
requires-python = ">=3.11"
# The root is a virtual workspace — it owns no code itself; real deps live
# in the per-member pyproject.toml files.
dependencies = []

[tool.uv.workspace]
members = ["core", "backend", "tui"]

# External path-based sources the workspace shares.
[tool.uv.sources]
rag-service = { path = "./rag-service" }
apex-agent-core = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Discover tests from every member that ships them.
testpaths = ["core/tests", "backend/tests"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.36.2",
    "textual-dev>=1.8.0",
]
