[project]
name = "apex-tui"
version = "0.1.0"
description = "Textual TUI client for the Apex Agent."
requires-python = ">=3.11"
dependencies = [
    "apex-agent-core",
    "textual>=0.50.0",
    "rich>=13.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tui"]
